Fix x-overflow

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -160,34 +160,34 @@ body {
   margin-bottom: 12px; }
 
 .ph-line:nth-of-type(1) {
-  width: 72%; }
+  width: 77%; }
 
 .ph-line:nth-of-type(2) {
-  width: 98%; }
+  width: 75%; }
 
 .ph-line:nth-of-type(3) {
-  width: 76%; }
+  width: 81%; }
 
 .ph-line:nth-of-type(4) {
-  width: 78%; }
+  width: 94%; }
 
 .ph-line:nth-of-type(5) {
-  width: 96%; }
+  width: 71%; }
 
 .ph-line:nth-of-type(6) {
-  width: 100%; }
+  width: 84%; }
 
 .ph-line:nth-of-type(7) {
-  width: 97%; }
+  width: 82%; }
 
 .ph-line:nth-of-type(8) {
-  width: 72%; }
+  width: 100%; }
 
 .ph-line:nth-of-type(9) {
-  width: 85%; }
+  width: 95%; }
 
 .ph-line:nth-of-type(10) {
-  width: 95%; }
+  width: 71%; }
 
 .ph-header {
   margin-bottom: 8px;
@@ -223,11 +223,11 @@ body {
   .ph-image-paragraph .ph-line:nth-of-type(3) {
     margin-left: 88px; }
   .ph-image-paragraph .ph-line:nth-of-type(1) {
-    width: calc(73% - 88px); }
+    width: calc(81% - 88px); }
   .ph-image-paragraph .ph-line:nth-of-type(2) {
-    width: calc(98% - 88px); }
+    width: calc(93% - 88px); }
   .ph-image-paragraph .ph-line:nth-of-type(3) {
-    width: calc(95% - 88px); }
+    width: calc(90% - 88px); }
   .ph-image-paragraph .ph-lines {
     display: flex;
     flex-direction: column;
@@ -633,7 +633,7 @@ html {
 
 .footer {
   height: 120px;
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
