--- a/docs/sass/footer.sass
+++ b/docs/sass/footer.sass
@@ -1,6 +1,6 @@
 .footer
   height: 120px
-  width: 100vw
+  width: 100%
   display: flex
   align-items: center
   justify-content: space-evenly
